--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,6 +45,8 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
+    // Barcode scanning API
+    implementation 'com.google.mlkit:barcode-scanning:17.0.0'
 
     def camerax_version = "1.0.0-rc01"
     def camerax_view_version = "1.0.0-alpha20"
